Bug 158186 - Mismatching config key name and property name in UI code
Summary: Mismatching config key name and property name in UI code
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
24.2.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Samuel Mehrbrodt
URL:
Whiteboard: target:24.8.0 target:24.2.0.0.beta2
Keywords: implementationError
Depends on:
Blocks: AutoCorrect-Complete
  Show dependency treegraph
 
Reported: 2023-11-12 19:35 UTC by Gabor Kelemen (Collabora)
Modified: 2023-12-18 19:40 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
The option is first enabled (74.19 KB, image/png)
2023-11-12 19:35 UTC, Gabor Kelemen (Collabora)
Details
After restart, it's disabled again (73.59 KB, image/png)
2023-11-12 19:35 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2023-11-12 19:35:27 UTC
Created attachment 190796 [details]
The option is first enabled

While searching for unused config keys, I found in Writer.xcs the ApplyBulletsAfterSpace which is seemingly not used by the code.

This was added recently in commit
https://cgit.freedesktop.org/libreoffice/core/commit/?id=c4fc18308074634e9578ad12d94d937f259aa22a

but when the code wants to save it, the property name in SvxSwAutoCorrCfg::GetPropertyNames is "Format/ByInput/ApplyNumberingAfterSpace",                      //48
which is not the same. Changing the value in the UI won't be remembered after restart of LO.

1. Open Writer, go to Tools - AutoCorrect - AutoCorrect options
2. Go to the Options tab, and in the list enable the new "Bulleted and numbered lists immediate after pressing space" option
3. Press OK, restart LO
4. Go back to the AutoCorrect options - Options tab
-> "Bulleted and numbered lists immediate after pressing space" option is unchecked

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 41d9584179ef7b4e18eda47c2c0a955df8c087a5
CPU threads: 16; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: hu-HU (hu_HU.UTF-8); UI: en-US
Calc: threaded
Comment 1 Gabor Kelemen (Collabora) 2023-11-12 19:35:50 UTC
Created attachment 190797 [details]
After restart, it's disabled again
Comment 2 MW 2023-11-12 23:56:31 UTC
I couldn't reproduce this on win 10 version. There is an option for "Bullet and number list. Bullet symbol" but no "Bulleted and numbered lists immediate after pressing space" option. Also the option that is there does not reset when restarting LO. Potentially Linux specific.

Version: 7.6.2.1 (X86_64) / LibreOffice Community
Build ID: 56f7684011345957bbf33a7ee678afaf4d2ba333
CPU threads: 8; OS: Windows 10.0 Build 19045; UI render: Skia/Vulkan; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: threaded
Comment 3 MW 2023-11-14 09:30:19 UTC
REPRODUCIBLE 

Steps:

1. Open auto correct options

2. Enable "Bulleted and numbered lists immediate after pressing space" option

3. Press ok and restart

Result:

"Bulleted and numbered lists immediate after pressing space" option resets to default/disabled status.

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: c60a9db1f2a8e2a088c6b89bcdff4901b28f2864
CPU threads: 8; OS: Windows 10.0 Build 19045; UI render: Skia/Vulkan; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: threaded
Comment 4 Szymon Kłos 2023-11-15 10:09:12 UTC
Thanks for report, I will talk to Darshan.
Comment 5 Commit Notification 2023-12-18 15:37:20 UTC
Samuel Mehrbrodt committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/0a431e89b743bc3b29716b4ef2ae863beff90f80

tdf#158186 Fix saving ApplyNumberingAfterSpace

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2023-12-18 19:40:51 UTC
Samuel Mehrbrodt committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/c2de1babeaa4cee171afadd6d337ffd1f17664a7

tdf#158186 Fix saving ApplyNumberingAfterSpace

It will be available in 24.2.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.