tdf#158186 Fix saving ApplyNumberingAfterSpace

Change-Id: I6880f75c140f6e800bbdb6c56dd1ff166a3191d1
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/160916
Tested-by: Jenkins
Reviewed-by: Samuel Mehrbrodt <samuel.mehrbrodt@allotropia.de>